Bug Fix: Subnav scrolling jumped at boundry. A subnav-filler div is now added/removed when entering/leaving subnav-fixed

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -252,6 +252,10 @@ h1.notice {
   }
 }
 
+#subnav-filler {
+  @extend .subnav;
+}
+
 .subnav-fixed {
   position: fixed;
   top: 40px;
